Move autocolor and gravity radio to the right

--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
 						<input type="radio" name="paintbucket" class="paintbucket" id="S" value="S" />
 						<span></span>
 					</label>
-					<div></div>
 					<label for="O">
 						<input type="radio" name="paintbucket" class="paintbucket" id="O" value="O" />
 						<span></span>
@@ -101,8 +100,13 @@
 						<input type="radio" name="paintbucket" class="paintbucket" id="T" value="T" />
 						<span></span>
 					</label>
-					<div></div>
 				</form>
+				<div>
+					<input type="checkbox" checked id="autocolor"> <label for="autocolor">autocolor</label>
+				</div>
+				<div>
+					<input type="checkbox" checked id="grav"> <label for="grav">gravity</label>
+				</div>
 			</div>
 		</div>
 
@@ -110,10 +114,5 @@
 			About
 		</button>
 		<button class="button" target="popup" onclick="ctrlsPopup()">Game Settings</button>
-		<div></div>
-		
-        <input type="checkbox" checked id="autocolor"> <label for="autocolor">autocolor</label>
-        <div></div>
-        <input type="checkbox" checked id="grav"> <label for="grav">gravity</label>
 	</body>
 </html>
