Correctly define 'About' as an anchor tag

--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
 			</div>
 		</div>
 
-		<button class="button" onclick="this.blur(); window.open('https\:\/\/github.com/swng/zztetris#readme')">
-			About
-		</button>
+		<a class="button" target="_blank" href="https://github.com/swng/zztetris#readme">About</a>
 		<button class="button" target="popup" onclick="ctrlsPopup()">Game Settings</button>
 	</body>
 </html>
