--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 			</div>
 
 			<div class="board-settings">
+				<h3>Options</h3>
 				<button class="button button--shuffle" onclick="this.blur(); shuffleQueue();">Queue</button>
 				<button class="button button--shuffle" onclick="this.blur(); shuffleQueuePlusHold();">Queue + Hold</button>
 
