adding cheese 4w grav modes

--- a/index.html
+++ b/index.html
@@ -140,5 +140,10 @@
 
 		<a class="button" target="_blank" href="https://github.com/swng/zztetris#readme">About</a>
 		<button class="button" target="popup" onclick="ctrlsPopup()">Game Settings</button>
+        <a class="button">button that does nothing</a>
+        <a class="button" href="index.html">practice</a>
+        <a class="button" href="cheese.html">cheese</a>
+        <a class="button" href="4w.html">4w</a>
+        <a class="button" href="grav.html">grav</a>
 	</body>
 </html>
