on screen buttons for mobile

--- a/index.html
+++ b/index.html
@@ -145,5 +145,22 @@
         <a class="button" href="cheese.html">cheese</a>
         <a class="button" href="4w.html">4w</a>
         <a class="button" href="grav.html">grav</a>
+
+        <div id = "tcc" style class = "tc">
+            <div>
+                <span id="tc-dr"><svg><use xlink:href="/icons/dark.svg#s-r180"></use></svg></span>
+                <span id="tc-h"><svg><use xlink:href="/icons/dark.svg#s-hold"></use></svg></span>
+                <span id="tc-hd"><svg><use xlink:href="/icons/dark.svg#s-harddrop"></use></svg></span>
+                </div>
+                <div>
+                <span id="tc-l"><svg><use xlink:href="/icons/dark.svg#s-back"></use></svg></span>
+                <span id="tc-r"><svg><use xlink:href="/icons/dark.svg#s-forward"></use></svg></span>
+                <span id="tc-d"><svg><use xlink:href="/icons/dark.svg#s-down"></use></svg></span>
+                <span id="tc-cc"><svg><use xlink:href="/icons/dark.svg#s-ccw"></use></svg></span>
+                <span id="tc-c"><svg><use xlink:href="/icons/dark.svg#s-cw"></use></svg></span>
+                <span id="tc-re"><svg><use xlink:href="/icons/dark.svg#s-reload"></use></svg></span>
+                </div>
+            <canvas id="mobile_controls"></canvas>
+        </div>
 	</body>
 </html>
