--- a/controls.html
+++ b/controls.html
@@ -1,4 +1,4 @@
-<script src="jquery.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <style>
 	@font-face {
 		font-family: Mikado;
