--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<script src="jquery.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script defer src="zztetris.js"></script>
 	<script src="rotationSystem.js"></script>
 	<script src="tetris-fumen.js"></script>
