attempted fix for inconsistent initial keybind bug

--- a/controls.html
+++ b/controls.html
@@ -145,14 +145,14 @@
 		'ArrowLeft',
 		'ArrowRight',
 		'ArrowDown',
-		' ',
-		'Shift',
-		'x',
-		'z',
-		'c',
-		'r',
-		't',
-		'y',
+		'Space',
+		'ShiftLeft',
+		'KeyZ',
+		'KeyX',
+		'KeyC',
+		'KeyR',
+		'KeyT',
+		'KeyY',
 		'160',
 		'30',
 		'15',
