adding tetra-online kick table

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 						<option value="SRS+">SRS+</option>
 						<option value="SRS">SRS</option>
 						<option value="SRS-X">SRS-X</option>
+                        <option value="Tetra-Online">Tetra-Online</option>
 						<option value="ASC">ASC</option>
                         <option value="none">none</option>
 					</select>
