--- a/4w.html
+++ b/4w.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script defer src="base.js"></script>
+	<script defer src="tetrio.js"></script>
 	<script defer src="4w.js"></script>
 	<script src="rotationSystem.js"></script>
+	<script src="io.js"></script>
 	<script src="tetris-fumen.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<link rel="icon" href="./assets/pieceSprite/z.png" />
