Moved `zztetris.css` and trimmed trailing whitespaces

--- a/4w.html
+++ b/4w.html
@@ -10,7 +10,7 @@
 	<script defer src="4w.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<link rel="icon" href="./assets/pieceSprite/z.png" />
-	<link rel="stylesheet" type="text/css" href="zztetris.css" />
+	<link rel="stylesheet" type="text/css" href="styles/zztetris.css" />
 	<link rel="stylesheet" type="text/css" href="styles/paint_bucket.css" />
 	<link rel="stylesheet" type="text/css" href="styles/import_export.css" />
 	<link rel="stylesheet" type="text/css" href="styles/board_settings.css" />
