--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script defer src="tetrio.js"></script>
 	<script defer src="zztetris.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-	<link rel="icon" href="./pieceSprite/z.png" />
+	<link rel="icon" href="./assets/pieceSprite/z.png" />
 	<link rel="stylesheet" type="text/css" href="styles/zztetris.css" />
 	<link rel="stylesheet" type="text/css" href="styles/paint_bucket.css" />
 	<link rel="stylesheet" type="text/css" href="styles/import_export.css" />
