--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta property="og:title" content="ZZTetris" />
 		<meta
 			property="og:description"
-			content='a tetris client that starts with ZZ so you can type "ZZ" into your address bar and have it autocommplete'
+			content='a tetris client that starts with ZZ so you can type "ZZ" into your address bar and have it autocomplete'
 		/>
 		<meta
 			property="og:image"
