--- a/4w.html
+++ b/4w.html
@@ -21,7 +21,7 @@
 		<meta property="og:title" content="ZZTetris" />
 		<meta
 			property="og:description"
-			content='a tetris client that starts with ZZ so you can type "ZZ" into your address bar and have it autocommplete'
+			content='a tetris client that starts with ZZ so you can type "ZZ" into your address bar and have it autocomplete'
 		/>
 		<meta
 			property="og:image"
@@ -149,6 +149,7 @@
         <a class="button" href="cheese.html">cheese</a>
         <a class="button" href="4w.html">4w</a>
         <a class="button" href="grav.html">grav</a>
+        <a class="button" href="pc.html">pc</a>
 
 		<div id = "tcc" style class = "tc">
             <div>
