--- a/cheese.html
+++ b/cheese.html
@@ -149,6 +149,7 @@
         <a class="button" href="cheese.html">cheese</a>
         <a class="button" href="4w.html">4w</a>
         <a class="button" href="grav.html">grav</a>
+        <a class="button" href="pc.html">pc</a>
 
 		<div id = "tcc" style class = "tc">
             <div>
