--- a/pc.html
+++ b/pc.html
@@ -7,7 +7,7 @@
 	<script src="tetris-fumen.js"></script>
 	<script defer src="base.js"></script>
 	<script defer src="tetrio.js"></script>
-	<script defer src="zztetris.js"></script>
+	<script defer src="pc.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<link rel="icon" href="./assets/pieceSprite/z.png" />
 	<link rel="stylesheet" type="text/css" href="styles/zztetris.css" />
@@ -134,7 +134,6 @@
 						<option value="SRS+">SRS+</option>
 						<option value="SRS">SRS</option>
 						<option value="SRS-X">SRS-X</option>
-                        <option value="Tetra-Online">Tetra-Online</option>
 						<option value="ASC">ASC</option>
                         <option value="none">none</option>
 					</select>
@@ -152,7 +151,7 @@
         <a class="button" href="grav.html">grav</a>
         <a class="button" href="pc.html">pc</a>
 
-        <div id = "tcc" style class = "tc">
+		<div id = "tcc" style class = "tc">
             <div>
                 <span id="tc-dr"><svg><use xlink:href="./assets/icons/dark.svg#s-r180"></use></svg></span>
                 <span id="tc-h"><svg><use xlink:href="./assets/icons/dark.svg#s-hold"></use></svg></span>
