importImage on paste, for Firefox users

--- a/4w.html
+++ b/4w.html
@@ -44,7 +44,7 @@
 					<button class="button" onclick="this.blur(); importFumen()">Fumen</button>
 					<button class="button" onclick="this.blur(); importFullFumen()">Full Fumen</button>
 					<button class="button" onclick="this.blur(); importTetrio()">TETRIO</button>
-					<button class="button" onclick="this.blur(); importImage()">Image</button>
+					<button class="button" onclick="this.blur(); importImageButton()">Image</button>
 				</div>
 			</div>
 
