fix tspin detection again; adjust default controls for consistency

--- a/controls.html
+++ b/controls.html
@@ -74,34 +74,34 @@
 
 			<tr>
 				<td>Rotate Clockwise</td>
-				<td class="input"><kbd id="6">X</kbd></td>
+				<td class="input"><kbd id="6">KeyX</kbd></td>
 			</tr>
 
 			<tr>
 				<td>Rotate Counterclockwise</td>
-				<td class="input"><kbd id="7">Z</kbd></td>
+				<td class="input"><kbd id="7">KeyZ</kbd></td>
 			</tr>
 
 			<tr>
 				<td>Rotate 180°</td>
-				<td class="input"><kbd id="8">C</kbd></td>
+				<td class="input"><kbd id="8">KeyC</kbd></td>
 			</tr>
 
 			<tr>
 				<td>Restart</td>
-				<td class="input"><kbd id="9">R</kbd></td>
+				<td class="input"><kbd id="9">KeyR</kbd></td>
 			</tr>
 
 			<tr></tr>
 			<tr>
 				<td>Undo</td>
-				<td class="input"><kbd id="10">T</kbd></td>
+				<td class="input"><kbd id="10">KeyT</kbd></td>
 			</tr>
 
 			<tr></tr>
 			<tr>
 				<td>Redo</td>
-				<td class="input"><kbd id="11">Y</kbd></td>
+				<td class="input"><kbd id="11">KeyY</kbd></td>
 			</tr>
 
 			<tr>
@@ -151,8 +151,8 @@
 		'ArrowDown',
 		'Space',
 		'ShiftLeft',
-		'KeyZ',
 		'KeyX',
+		'KeyZ',
 		'KeyC',
 		'KeyR',
 		'KeyT',
