--- a/controls.html
+++ b/controls.html
@@ -150,18 +150,18 @@
 		'ArrowRight',
 		'ArrowDown',
 		'Space',
-		'ShiftLeft',
-		'KeyX',
-		'KeyZ',
 		'KeyC',
+		'ArrowUp',
+		'KeyV',
+		'KeyD',
 		'KeyR',
 		'KeyT',
 		'KeyY',
-		'160',
-		'30',
-		'15',
+		'117',
+		'0',
+		'0',
 		'20',
-        '100',
+        	'0',
 	];
 	var ctrlsDat = LS.config;
 
